# Rusty-Activity-Pub

./: .gitignore  Makefile  README.md
server/: Cargo.toml  jq
server/migrations/: 20230608044101_init.sql
server/src/: ActivityPub.rs  main.rs  routes.rs  utils.rs
server/src/ActivityPub/: user.rs  webfinger.rs
server/src/handlers/: api.rs  users.rs  webfinger.rs
server/src/middleware/: auth.rs
server/src/models/: accounts.rs
server/src/routes/: api.rs  users.rs  webfinger.rs
server/src/utils/: essentials.rs  server.rs
