[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
ring = "0.16.20"
sha2 = "*"
hex = "0.4.3"
base64 = "0.13.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
